--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://${TRAVEL_SERVICE_DB_HOST}:${TRAVEL_SERVICE_DB_PORT}/${TRAVEL_SERVICE_DB_SCHEMA}
+spring.datasource.username=${TRAVEL_SERVICE_DB_USER}
+spring.datasource.password=${TRAVEL_SERVICE_DB_PASSWORD}
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
